--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(216, 228, 219, 0.555);
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     margin: 0;
   }
@@ -12,11 +12,20 @@ body {
     margin: 0;
   }
   ul.header {
-    background-color: rgb(97, 91, 91);
+    background-color: rgb(29, 18, 18);
     padding: 0;
+    margin: 0;
+  }
+  img {
+    display:block;
+    margin:auto;
+  }
+  .fondo {
+    display:block;
+    margin:auto;
   }
   ul.header li a {
-    color: #FFF;
+    color: rgb(250, 242, 242);
     font-weight: bold;
     text-decoration: none;
     padding: 20px;
@@ -24,15 +33,15 @@ body {
   }
   .content {
     background-color: #FFF;
-    padding: 20px;
+    padding: 10px;
   }
   .content h2 {
     padding: 0;
     margin: 0;
   }
   .content li {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
   }
   .active {
-    background-color: #0099FF;
+    background-color: rgb(197, 12, 12);
   }
