--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,7 +59,7 @@ body {
   display: inline-block;
   justify-content: center;
   -webkit-justify-content: center;
-  max-width: 650px;
+  max-width: 700px;
 }
 .card_img {
   display: inline-block;
@@ -91,6 +91,7 @@ body {
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+  cursor: pointer;
 }
 .card:hover {
   box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
@@ -151,9 +152,9 @@ body {
 	cursor:pointer;
 	color:#c92200;
 	font-family:Arial;
-	font-size:15px;
+	font-size:14px;
 	font-weight:bold;
-	padding:9px 47px;
+	padding:5px 47px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ded17c;
 }
